# skeleton

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  cmake_build.py
src/skeleton/: main.cc
src/skeleton/scene/: scene.cc  scene.hh
src/skeleton/shaders/: pbr_post_process.frag.glsl  pbr_post_process.vert.glsl
